--- a/videos-with-hooks/package.json
+++ b/videos-with-hooks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "videos-with-hooks",
+  "name": "videos",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -34,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.21.1"
   }
 }
